Remove theme improvements

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,43 @@
-remote_theme: pmarsceill/just-the-docs
+remote_theme: matthiaslischka/jekyll-uno
+
+# Site settings
+title: 'LHTML5 Spec'
+description: 'Official LHTML5 Specification'
+url: ''
+#baseurl: '/lhtml5'
+
+author:
+  name: 'Matthew Heroux'
+  github_username: hxtree
+
+defaults:
+  -
+    scope:
+      path: ''
+      type: 'posts'
+    values:
+      layout: 'post'
+
+# Build settings
+destination: _site
+paginate: 10
+permalink: /:year/:title/
+markdown: kramdown
+highlighter: rouge
+
+sass:
+  sass_dir: _sass
+  style: compressed
+
+kramdown:
+  # use Github Flavored Markdown
+  input: GFM
+  # do not replace newlines by <br>s
+  hard_wrap: false
+
+plugins:
+  - jekyll-paginate
+  - jekyll-remote-theme
+  - jekyll-include-cache
+
+exclude: ['README.md', 'Gemfile', 'Gemfile.lock', '.travis.yml', 'vendor']
