Set theme jekyll-theme-cayman

--- a/_config.yml
+++ b/_config.yml
@@ -21,3 +21,4 @@ plugins:
   - jekyll-include-cache
 
 exclude: ['README.md', 'Gemfile', 'Gemfile.lock', '.travis.yml', 'vendor']
+theme: jekyll-theme-cayman
